// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`frodo iga workflow describe "frodo iga workflow describe --file test/e2e/exports/all/allWorkflows.workflow.json": should describe first workflow from file test/e2e/exports/all/allWorkflows.workflow.json 1`] = `
"Draft Workflow
Id          │createNonEmployee            
Name        │CreateNonEmployee            
Display Name│CreateNonEmployee            
Description │CreateNonEmployee            
Type        │provisioning                 
Status      │draft                        
Mutable     │true                         
ChildType   │false                        
Steps (6)   │approvalTask-74cf85c35437    
            │scriptTask-0359a9d77ee2      
            │scriptTask-aec6c36b3a45      
            │scriptTask-ca9504ae90d8      
            │scriptTask-e8842de66fbb      
            │exclusiveGateway-abbb089758c8


Email Templates (9):
- [FrodoTestEmailTemplate1] Frodo Test Email Template One - Reset your password
- [FrodoTestEmailTemplate2] Frodo Test Email Template Two - One-Time Password for login
- [FrodoTestEmailTemplate3] Frodo Test Email Template Three - Multi-Factor Email for Identity Cloud login
- [frodoTestEmailTemplateFour] Frodo Test Email Template Four - Subject
- [requestAssigned]  - ATTENTION: Request Assigned
- [requestEscalated]  - ATTENTION: Request Escalation
- [requestExpired]  - ATTENTION: Expiration of Request
- [requestReassigned]  - ATTENTION: Request Reassigned
- [requestReminder]  - ATTENTION: Reminder to complete Request

Events (3):
- [2a441af0-d057-46a1-996b-1f3ff2725122] test_workflow_event_1
- [4bfdbe77-794a-4eb2-85ef-320a327d44ff] test_workflow_event_3
- [c87b0605-03f6-4372-9ba6-e0f43e0b3bcf] phh-teacher-birthright-role-approval

Request Forms (4):
- [9c10b680-a790-4f73-95ed-81b345f0f3e9] phh-delegated-user-disable-form
- [9e3fc668-4e96-4b03-9605-38b830bea26c] test_workflow_request_form_2
- [c385b530-b912-4dcd-98c8-931673add9b7] phh-new-user
- [fa1a5e72-d803-4879-bc2a-07a5da3d8ee9] test_workflow_request_form_1

Request Types (5):
- [3eb082e7-68f2-409f-9423-26e771259dc8] test_workflow_request_type_4
- [8d0055b3-155f-4885-a415-4f1c536098e8] phh-create-user
- [af4a6f84-f9a9-4f8d-82ae-649639debabc] test_workflow_request_type_5
- [e9dcd66e-1388-4872-9790-66df2f44deef] test_workflow_request_type_1
- [fdf9e9a1-b5cf-496a-821b-e7b3d5841252] phh-delegate-user-disable-type
"
`;

exports[`frodo iga workflow describe "frodo iga workflow describe --workflow-id testWorkflow1": should describe workflow 'testWorkflow1' 1`] = `
"Draft Workflow
Id          │testWorkflow1                
Name        │test_workflow_1              
Display Name│test_workflow_1              
Description │test_workflow_1              
Status      │draft                        
Mutable     │true                         
ChildType   │false                        
Steps (14)  │approvalTask-7e33e73d6763    
            │fulfillmentTask-7fce35a32915 
            │exclusiveGateway-94bc3d35f3b4
            │inclusiveGateway-a6cf9605ce55
            │scriptTask-493f5ea87636      
            │violationTask-50261d9bc712   
            │emailTask-2068f5d711c8       
            │waitTask-b7fc169ca4eb        
            │approvalTask-363e32acf981    
            │fulfillmentTask-29a71d4ab8ed 
            │emailTask-881f2975e240       
            │waitTask-72d593301121        
            │waitTask-b343cc7df7c9        
            │violationTask-f8066518b46a   

Published Workflow
Id          │testWorkflow1                
Name        │test_workflow_1              
Display Name│test_workflow_1              
Description │test_workflow_1              
Status      │published                    
Mutable     │true                         
ChildType   │false                        
Steps (14)  │approvalTask-7e33e73d6763    
            │fulfillmentTask-7fce35a32915 
            │exclusiveGateway-94bc3d35f3b4
            │inclusiveGateway-a6cf9605ce55
            │scriptTask-493f5ea87636      
            │violationTask-50261d9bc712   
            │emailTask-2068f5d711c8       
            │waitTask-b7fc169ca4eb        
            │approvalTask-363e32acf981    
            │fulfillmentTask-29a71d4ab8ed 
            │emailTask-881f2975e240       
            │waitTask-72d593301121        
            │waitTask-b343cc7df7c9        
            │violationTask-f8066518b46a   


Email Templates (4):
- [FrodoTestEmailTemplate1] Frodo Test Email Template One - Reset your password
- [FrodoTestEmailTemplate2] Frodo Test Email Template Two - One-Time Password for login
- [FrodoTestEmailTemplate3] Frodo Test Email Template Three - Multi-Factor Email for Identity Cloud login
- [frodoTestEmailTemplateFour] Frodo Test Email Template Four - Subject

Events (1):
- [2a441af0-d057-46a1-996b-1f3ff2725122] test_workflow_event_1

Request Forms (2):
- [9e3fc668-4e96-4b03-9605-38b830bea26c] test_workflow_request_form_2
- [fa1a5e72-d803-4879-bc2a-07a5da3d8ee9] test_workflow_request_form_1

Request Types (2):
- [af4a6f84-f9a9-4f8d-82ae-649639debabc] test_workflow_request_type_5
- [e9dcd66e-1388-4872-9790-66df2f44deef] test_workflow_request_type_1
"
`;

exports[`frodo iga workflow describe "frodo iga workflow describe -i testWorkflow1 -f test/e2e/exports/all/allWorkflows.workflow.json": should describe workflow 'testWorkflow1' from file test/e2e/exports/all/allWorkflows.workflow.json 1`] = `
"Draft Workflow
Id          │testWorkflow1                
Name        │test_workflow_1              
Display Name│test_workflow_1              
Description │test_workflow_1              
Status      │draft                        
Mutable     │true                         
ChildType   │false                        
Steps (14)  │approvalTask-7e33e73d6763    
            │fulfillmentTask-7fce35a32915 
            │exclusiveGateway-94bc3d35f3b4
            │inclusiveGateway-a6cf9605ce55
            │scriptTask-493f5ea87636      
            │violationTask-50261d9bc712   
            │emailTask-2068f5d711c8       
            │waitTask-b7fc169ca4eb        
            │approvalTask-363e32acf981    
            │fulfillmentTask-29a71d4ab8ed 
            │emailTask-881f2975e240       
            │waitTask-72d593301121        
            │waitTask-b343cc7df7c9        
            │violationTask-f8066518b46a   

Published Workflow
Id          │testWorkflow1                
Name        │test_workflow_1              
Display Name│test_workflow_1              
Description │test_workflow_1              
Status      │published                    
Mutable     │true                         
ChildType   │false                        
Steps (14)  │approvalTask-7e33e73d6763    
            │fulfillmentTask-7fce35a32915 
            │exclusiveGateway-94bc3d35f3b4
            │inclusiveGateway-a6cf9605ce55
            │scriptTask-493f5ea87636      
            │violationTask-50261d9bc712   
            │emailTask-2068f5d711c8       
            │waitTask-b7fc169ca4eb        
            │approvalTask-363e32acf981    
            │fulfillmentTask-29a71d4ab8ed 
            │emailTask-881f2975e240       
            │waitTask-72d593301121        
            │waitTask-b343cc7df7c9        
            │violationTask-f8066518b46a   


Email Templates (9):
- [FrodoTestEmailTemplate1] Frodo Test Email Template One - Reset your password
- [FrodoTestEmailTemplate2] Frodo Test Email Template Two - One-Time Password for login
- [FrodoTestEmailTemplate3] Frodo Test Email Template Three - Multi-Factor Email for Identity Cloud login
- [frodoTestEmailTemplateFour] Frodo Test Email Template Four - Subject
- [requestAssigned]  - ATTENTION: Request Assigned
- [requestEscalated]  - ATTENTION: Request Escalation
- [requestExpired]  - ATTENTION: Expiration of Request
- [requestReassigned]  - ATTENTION: Request Reassigned
- [requestReminder]  - ATTENTION: Reminder to complete Request

Events (3):
- [2a441af0-d057-46a1-996b-1f3ff2725122] test_workflow_event_1
- [4bfdbe77-794a-4eb2-85ef-320a327d44ff] test_workflow_event_3
- [c87b0605-03f6-4372-9ba6-e0f43e0b3bcf] phh-teacher-birthright-role-approval

Request Forms (4):
- [9c10b680-a790-4f73-95ed-81b345f0f3e9] phh-delegated-user-disable-form
- [9e3fc668-4e96-4b03-9605-38b830bea26c] test_workflow_request_form_2
- [c385b530-b912-4dcd-98c8-931673add9b7] phh-new-user
- [fa1a5e72-d803-4879-bc2a-07a5da3d8ee9] test_workflow_request_form_1

Request Types (5):
- [3eb082e7-68f2-409f-9423-26e771259dc8] test_workflow_request_type_4
- [8d0055b3-155f-4885-a415-4f1c536098e8] phh-create-user
- [af4a6f84-f9a9-4f8d-82ae-649639debabc] test_workflow_request_type_5
- [e9dcd66e-1388-4872-9790-66df2f44deef] test_workflow_request_type_1
- [fdf9e9a1-b5cf-496a-821b-e7b3d5841252] phh-delegate-user-disable-type
"
`;
